--- a/01/index.html
+++ b/01/index.html
@@ -6,21 +6,26 @@
         background: black;
         color: white;
         font-family: sans-serif;
-        text-align: center;
         font-size: 20pt;
       }
 
       .demo {
-        margin: auto;
-        width:50%;
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+        margin-left: 15px;
+        margin-right: 15px;
+      }
+
+      #header {
+        text-align: center;
       }
 
       #screenshot {
         float:left;
-        margin-right: 20px;
-        margin-bottom: 20px;
-        max-width: 300px;
+        max-width: 500px;
         border: thin solid white;
+        display: block;
       }
 
       #description {
@@ -43,33 +48,44 @@
     </style>
   </head>
   <body>
+    <div id="header">
+      <img id='cube' src='https://cs460.org/gfx/cube.png'>
 
-    <img id='cube' src='https://cs460.org/gfx/cube.png'>
-
-    <h1>RO.ME "3 DREAMS OF BLACK"</h1>
+      <h1>RO.ME "3 DREAMS OF BLACK"</h1>
+    </div>
 
     <div class='demo'>
 
-      <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
-      <p id='description'>
-      <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
-      </p>
-      <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
-      </p>
-      <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
-      </p>
-      <p id='ai'>
-      Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
-      </p>
-
-      <div id='bonus'>
-        <!-- TODO: BONUS TASK GOES HERE -->
+      <!-- Screenshot from the end of the demo where the user is flying around a desert -->
+      <div>
+        <img id='screenshot' src='rome screenshot.png'>
       </div>
-
+      <div>
+        <p id='description'>
+          <b>Description:</b> I thought the RO.ME demo was a very interesting and unique way to interact with music. 
+          I honestly haven't seen any other music video experiences similar to this one. 
+          The demo takes the user through 3 different settings:
+          <ol>
+            <li>A broken down city where the users control animals roaming around.</li>
+            <li>An open field where a black void of insects is controlled by the user.</li>
+            <li>A vast desert where the user can freely control a flock of birds around floating masses of land.</li>
+          </ol>
+          Even for a demo made in 2011, this is still an impressive use of mixed media including 2D art, video, and 3D rendered graphics.
+        </p>
+        <p id='technology'>
+        Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+        </p>
+        <p id='comparison'>
+        Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
+        </p>
+        <p id='ai'>
+        Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+        </p>
+      </div>
+      
+    </div>
+    <div id='bonus'>
+      <!-- TODO: BONUS TASK GOES HERE -->
     </div>
 
   </body>
