did the bonus, added models

--- a/01/index.html
+++ b/01/index.html
@@ -51,7 +51,7 @@
     <div class='demo'>
 
       <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      <img id='screenshot' src='RO.ME%20Screenshot.png'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
       RO.ME is a very cool webgl demo! It is an interactive movie that takes the viewer through
@@ -97,7 +97,18 @@
       <div id='bonus'>
         <!-- TODO: BONUS TASK GOES HERE -->
         <p>Models Taken From mrdoob: https://github.com/mrdoob/rome-gltf</p>
-        
+        <body>
+
+        <span id="content">
+
+			<iframe class="viewer" src="viewer.html?models/goat.gltf"></iframe>
+            <iframe class="viewer" src="viewer.html?models/birds_raven.gltf"></iframe>
+            <iframe class="viewer" src="viewer.html?models/quadruped_horse.gltf"></iframe>
+
+		</span>
+
+
+        </body>
       </div>
 
     </div>
