--- a/01/index.html
+++ b/01/index.html
@@ -61,22 +61,24 @@
         interesting websites.
       </p>
       <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
-        - WebGL
-        - HTML5
-        - JavaScript
+      Technology: <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+        <ul>
+          <li>WebGL</li>
+          <li>HTML</li>
+          <li>Javascript</li>
+        </ul>
       </p>
       <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
-        Chosen Website: https://www.no-fishing.net/
+      Comparison: <br> <!-- TODO: FILL IN THE COMPARISON -->
+        Chosen Website: https://www.no-fishing.net/ <br>
         The interactive story I clicked on was much more informative, and its interactions
         felt a bit more substantial. I was able to click around the world ane learn more about
         the efforts of governments in ending illegal fishing operations, and the locations
         of ships.
       </p>
       <p id='ai'>
-      Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
-        AI: ChatGPT
+      Significance (AI): <br> <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+        AI: ChatGPT <br>
         RO.ME: 3 Dreams of Black was significant because it marked one of the first
         large-scale showcases of WebGL as a serious medium for interactive art and
         storytelling on the web. Released in 2011 by Google in collaboration with artist
