added to technology

--- a/01/index.html
+++ b/01/index.html
@@ -63,6 +63,7 @@
       <p id='technology'>
       Technology: <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
         <ul>
+          <li>Three.js</li>
           <li>WebGL</li>
           <li>HTML</li>
           <li>Javascript</li>
