--- a/01/index.html
+++ b/01/index.html
@@ -51,7 +51,7 @@
     <div class='demo'>
 
       <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      <img id='screenshot' src='image.png'>
       <p id='description'>
       RO.ME is a very creative interactive demo and it incorporates several mediums
       to create a full project. It was released shortly after WebGL's official release
