--- a/01/index.html
+++ b/01/index.html
@@ -54,7 +54,7 @@
       <img id='screenshot' src='https://placehold.co/300x300'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
+      RO.ME is a very cool webgl demo! Meow meow meow meow meow
       </p>
       <p id='technology'>
       Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
