Finished main part of assignment

--- a/01/index.html
+++ b/01/index.html
@@ -51,19 +51,36 @@
     <div class='demo'>
 
       <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      <img id='screenshot' src='./screenshot.png'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
+        RO.ME is a very cool webgl demo! It takes you through a first person perspective of someone exploring a ruined down city. 
+        Greenery and flowers bloom as you travel through the city with many animals coming in and out of frame, with the animals cleanly
+        morphing from one animal to another. The perspective continues to change and morph, eventually taking a tour through a desert, ending up
+        flying through an island containing an upside down city.
       </p>
+
       <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+      Technology: <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+        <div>HTML5</div>
+        <div>JavaScript</div>
+        <div>WebGL</div>
       </p>
+
+      <img id="screenshot" src="./animalfutures.png"></img>
       <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
+        Comparison: <!-- TODO: FILL IN THE COMPARISON -->
+        <a href="https://www.rspca.org.uk/webContent/animalfutures/">Animal Futures</a> is a cool interactive experience that takes the user
+        through many examples of mistreatment of animals in the modern world and how we can improve. Animal Futures is more interactive 
+        compared with RO.ME. In RO.ME the user has no control overwhere the movements of the camera are. Animal Futures allows the user to 
+        click on various different areas of the map. There are five different maps each with their own interative elements that each tell their
+        own story.
       </p>
+
       <p id='ai'>
-      Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+        Significance (ChatGPT): <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+        RO.ME was important because it legitimized WebGL as a medium for storytelling and art, showing that the browser could deliver experiences 
+        previously reserved for native applications or plugins. It was a turning point from “tech demo” to “interactive art form.”
       </p>
 
       <div id='bonus'>
