--- a/01/index.html
+++ b/01/index.html
@@ -39,8 +39,16 @@
       #bonus {
         width: 100%;
       }
-
+      img {
+          max-width: 700px;
+          height: auto;
+        }
     </style>
+
+   <script src="https://cdn.jsdelivr.net/npm/three@0.118.0/build/three.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/three@0.118.0/examples/js/loaders/GLTFLoader.js"></script>
+
+
   </head>
   <body>
 
@@ -51,26 +59,119 @@
     <div class='demo'>
 
       <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      <img id='Photo' src='Photo.png'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo! Meow meow meow meow meow
+      Description: RO.ME is an interactive music video that utilizes three distinct media, switching between 
+       video, 2D, and 3D styles. This project was released in 2011 by The Google Creative Lab. This project was
+       very impactful to the web experience, as previously, many websites were using Flash or different plug-ins. 
+       Its use of WebGL and HTML allowed users to interact in real time and directly in the browser, which changed 
+       the game for the future of modern browser experience.  
       </p>
       <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+      Technology: WebGL, JavaScript, HTML5, CSS3, Three.js <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
       </p>
+
+      <img id='Photo2' src='Photo2.png'>
       <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
+      <div>
+      <a href="https://le-voyage-azarien.art/" target="_blank" rel="noopener"> Le Voyage Azarien
+      </a> </div>
+
+      Comparison: I compared RO.ME with Le Voyage Azarien. 
+
+       RO.ME (2011) created an innovative WebGL interactive video, which demonstrated the cinematic way storytelling 
+      can run directly in the browser. This project is more focused on storytelling, musical application, and artist 
+      visuals. On the other hand, Le Voyage (2023) uses modern WebGL, which modern technology allows this website to 
+      feel more like a real-time interactive journey than a guided music video.
       </p>
       <p id='ai'>
-      Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+      Significance (AI): <strong> <em>(via ChatGPT 5)</em></strong> RO.ME was a milestone because it proved that advanced 3D, music, 
+      and storytelling could run directly in the browser without plugins. It popularized WebGL at a time when most web 
+      graphics relied on Flash, showing the potential of open web technologies for cinematic and interactive experiences. <!-- TODO: SUMMARIZE THE AI OUTPUT -->
       </p>
 
       <div id='bonus'>
         <!-- TODO: BONUS TASK GOES HERE -->
+         <div id="viewer" style="width:100%; height:520px;"></div>
+
+      <script>
+        const container = document.getElementById('viewer');
+const renderer = new THREE.WebGLRenderer({ antialias: true });
+renderer.setPixelRatio(window.devicePixelRatio);
+renderer.setSize(container.clientWidth, container.clientHeight);
+container.appendChild(renderer.domElement);
+
+const scene = new THREE.Scene();
+scene.background = new THREE.Color(0x111111);
+
+const camera = new THREE.PerspectiveCamera(60, container.clientWidth / container.clientHeight, 0.1, 1000);
+camera.position.set(300, 120, 250);  
+camera.lookAt(-300, 0, 50);             
+
+
+
+scene.add(new THREE.HemisphereLight(0xffffff, 0x444444, 1.2));
+const dir = new THREE.DirectionalLight(0xffffff, 1.0);
+dir.position.set(3, 5, 2);
+scene.add(dir);
+
+// ✅ multiple mixers
+const mixers = [];
+const clock = new THREE.Clock();
+
+const loader = new THREE.GLTFLoader();
+
+function loadmodel(modelName, x, y, z){
+  loader.load(
+    modelName,
+    (gltf) => {
+      const model = gltf.scene;
+      model.position.set(x, y, z);
+      scene.add(model);
+
+      // one mixer per model
+      if (gltf.animations && gltf.animations.length) {
+        const mixer = new THREE.AnimationMixer(model);
+        gltf.animations.forEach(clip => mixer.clipAction(clip).play());
+        mixers.push(mixer);       // keep it so we can update all
+      }
+    },
+    undefined,
+    (err) => console.error('GLTF load error:', err)
+  );
+}
+
+// wide triangle around the origin
+loadmodel("birds_raven.gltf", 0, 0, 100);
+loadmodel("quadruped_panther.gltf", 0, 0,  200);
+loadmodel("quadruped_wolf.gltf", 0, 0, 0);
+
+
+
+// start the loop once
+animate();
+
+window.addEventListener('resize', () => {
+  const w = container.clientWidth, h = container.clientHeight;
+  renderer.setSize(w, h);
+  camera.aspect = w / h;
+  camera.updateProjectionMatrix();
+});
+
+function animate() {
+  requestAnimationFrame(animate);
+  const dt = clock.getDelta();
+  for (const m of mixers) m.update(dt);  
+  renderer.render(scene, camera);
+}
+
+      </script>
+
+         
       </div>
 
     </div>
-
+     
   </body>
 </html>
