--- a/01/index.html
+++ b/01/index.html
@@ -50,20 +50,34 @@
 
     <div class='demo'>
 
-      <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      <img id='screenshot' src='./ROME.png'>
       <p id='description'>
-      <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
+      RO.ME is an incredible piece of technology utilizing the capabilities of WebGL. I have never really seen/experienced a 
+      piece of interactive technology in this manner in 2025, and this project was created over 14 years ago, where it was 
+      probably considered revolutionary at the time. I've played plenty of video games, but to have a constantly moving
+       movie/video play while you can interact with it and change things really astounded me. You have parts of the video 
+       where the camera pans to wherever your mouse is pointing/moving towards, other parts where you paint the ground actively
+        black with your mouse as you travel through it, animals running around you which transforms into other animals actively
+         while you're still trying to play with it and figure out how the interactivity works. Truly a great piece of artistic design.
       </p>
       <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+      WebGL, HTML5, Three.js, WebGL Inspector
       </p>
       <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
+      Comparison: Link to the website I chose: <a href="https://promo.emotion-agency.com/" target="_blank">https://promo.emotion-agency.com/</a>
+      <br>
+      This promo.emotion agency website is very different than the RO.ME project, but maintains its own unique interactivity/fantastic visuals.  The website promotes an agency which
+      can help personal or business websites design websites that are more interactive using the same type of technology as RO.ME (WebGL), whereas RO.ME itself is not an interactive
+      website, but an interactive video.  The website showcases different visuals to entice the visitor to the site, but also to showcase what type of interactive sites this agency is
+      capable of creating utilizing WebGL.
       </p>
       <p id='ai'>
-      Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+      Significance (AI): I utilized ChatGPT as my AI tool to answer this question.  I initially prompted the AI with the following: "Can you search the web and explain to me what the RO.ME project is, which utilizes WebGL?"
+        Then, after ensuring it found the proper/correct information, I asked an additional prompt: "Can you explain the significance of RO.me, and why it was so important?"
+        <br>
+        The summarized AI answer is as follows: A Milestone for WebGL and Browser Technology - First-of-its-kind, Proof of WebGL's potential, Boosted Three.js adoption; Blending Art and Technology - Interactive Storytelling, 
+        Dynamic Experiences, Collaboration across disciplines; Influence and Cultural Impact - Mass exposure, Awards & recognition, set the tone for future "web experiences"; Long-Term Significance - Pushed Browsers forward, 
+        Inspired a generation of developers, preservation of digital art
       </p>
 
       <div id='bonus'>
