--- a/01/index.html
+++ b/01/index.html
@@ -54,10 +54,12 @@
       <img id='screenshot' src='https://placehold.co/300x300'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
+      RO.ME is a an immersive experience that utilizes WEBGL to take the user through a 2D and 3D film acoompanied 
+        with music. It tells the story of a song through a three phase plan. 
       </p>
       <p id='technology'>
       Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+        RO.ME uses javascript and HTML to utulize the GPU in your computer to render images in your browser
       </p>
       <p id='comparison'>
       Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
