--- a/01/index.html
+++ b/01/index.html
@@ -50,20 +50,26 @@
 
     <div class='demo'>
 
-      <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      <img id='screenshot' src='./images/RO.ME.png'>
+
       <p id='description'>
-      <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
+
+        RO.ME: 3 Dreams of Black came out in 2011, created by Chris Milk and Google Creative Lab. 
+        It was one of the first interactive films to run entirely in a web browser using WebGL. 
+        The demo showed that web browsers could handle 3D graphics and interactive storytelling. 
+
       </p>
+
       <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
-      </p>
+      Technology: WebGL for rendering 3D graphics, Three.js JavaScript library, HTML5 & CSS3, JavaScript, Google Maps API integration </p>
+      
       <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
+      Comparison: <a href="https://wldlght.com" target="_blank">WLDLGHT</a> is an interactive WebGL experience that focuses on exploring light and shadow in a 3D environment. 
+      Unlike RO.ME, which tells a cinematic story, WLDLGHT emphasizes visual experimentation and user interaction rather than narrative.
       </p>
       <p id='ai'>
-      Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+      Significance (AI): RO.ME was important because it demonstrated that fully interactive, cinematic 3D experiences could run directly in a web browser using WebGL, without 
+      any plugins like Flash, highlighting the web's potential for immersive storytelling.
       </p>
 
       <div id='bonus'>
