--- a/01/index.html
+++ b/01/index.html
@@ -51,7 +51,7 @@
     <div class='demo'>
 
       <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      <img id='screenshot' src='ROME.png'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
       RO.ME is a very cool webgl demo!
