--- a/01/index.html
+++ b/01/index.html
@@ -51,10 +51,10 @@
     <div class='demo'>
 
       <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      <img id='screenshot' src='rome.png'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
+      Rome is like a fever dream, traveling across the scenary that is semi-realistic but also not at the same time. 
       </p>
       <p id='technology'>
       Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
