--- a/01/index.html
+++ b/01/index.html
@@ -38,7 +38,16 @@
 
       #bonus {
         width: 100%;
+        clear: both;
+        }
       }
+        
+      .viewer {
+          border: 0;
+          width: 200px;
+          height: 200px;
+          padding: 10px;
+        }
 
     </style>
   </head>
@@ -67,7 +76,11 @@
       </p>
 
       <div id='bonus'>
-        <!-- TODO: BONUS TASK GOES HERE -->
+          <h2>Bonus: Animated Models</h2>
+          
+          <iframe class="viewer" src="viewer.html?files/models/bonus/alligator.gltf"></iframe>
+          <iframe class="viewer" src="viewer.html?files/models/bonus/birds_raven.gltf"></iframe>
+          <iframe class="viewer" src="viewer.html?files/models/bonus/goat.gltf"></iframe>
       </div>
 
     </div>
