Added everything but the bonus from assignment 1

--- a/01/index.html
+++ b/01/index.html
@@ -51,19 +51,23 @@
     <div class='demo'>
 
       <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      <img id='screenshot' src='Romedemo.jpg'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
+      The RO.ME demo is an interactive music video that takes the user to 3 different settings. The user is able to look around and change the area around the cursor. This was made in 2011 which was very ground breaking at the time as there was not a lot of interatinve music videos. Furthermore, these are real time renders instead of the normal videos.
       </p>
       <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+      Technology: HTML and JavaScript/WebGL <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
       </p>
       <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
+      Comparison: 
+      <a href="https://www.airforce.com/intothestorm/" target="_blank">
+        Link to another interactive video
+      </a> 
+      This interactive video by the Air Forced details the events of a civilian rescue mission due to a plane crash. This video uses multiple sliders and cursor based progression, whereas the Rome video was a continuous video.  <!-- TODO: FILL IN THE COMPARISON -->
       </p>
       <p id='ai'>
-      Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+      Significance (AI): RO.ME was a milestone in web-based graphics, showing that real-time 3D experiences could be delivered in a browser using WebGL. It combined music, storytelling, and interactivity in a groundbreaking way, influencing future interactive web experiences and validating WebGL as a serious development platform. <!-- TODO: SUMMARIZE THE AI OUTPUT -->
       </p>
 
       <div id='bonus'>
