--- a/01/index.html
+++ b/01/index.html
@@ -54,10 +54,15 @@
       <img id='screenshot' src='ROME.png'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
+      RO.ME is a very cool webgl demo! It was such a fascinating demo of WebGL, and it definitely demonstrated how much web development technology has progressed. 
+      It was so surprising to see that this music video from 2011 really showed the rendering power of WebGL. The impact on the computing power of the web browser
+      allows users to actively interact in real-time seamlessly within the scenery. The switch in art style was the most captivating, which keeps you hooked. The 
+      shifts between the art styles from 3D low poly to a 2D oil-like painting really give vibrant and unique colors at all times. It really makes you think how 
+      much potential these frameworks have, and makes you curious about the improvement of our computing web browser that is supposed to be even more efficient 
+      in the future.
       </p>
       <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+      Technology: WebGL, HTML5, JavaScript, Three.js <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
       </p>
       <p id='comparison'>
       Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
