--- a/01/index.html
+++ b/01/index.html
@@ -67,10 +67,11 @@
       This interactive video by the Air Forced details the events of a civilian rescue mission due to a plane crash. This video uses multiple sliders and cursor based progression, whereas the Rome video was a continuous video.  <!-- TODO: FILL IN THE COMPARISON -->
       </p>
       <p id='ai'>
-      Significance (AI): RO.ME was a milestone in web-based graphics, showing that real-time 3D experiences could be delivered in a browser using WebGL. It combined music, storytelling, and interactivity in a groundbreaking way, influencing future interactive web experiences and validating WebGL as a serious development platform. <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+      Significance (AI): RO.ME was a milestone in web-based graphics, showing that real-time 3D experiences could be delivered in a browser using WebGL. It combined music, storytelling, and interactivity in a groundbreaking way, influencing future interactive web experiences and validating WebGL as a serious development platform.(ChatGPT) <!-- TODO: SUMMARIZE THE AI OUTPUT -->
       </p>
 
       <div id='bonus'>
+        <iframe class="viewer" src="viewer.html?alligator.gltf"></iframe>
         <!-- TODO: BONUS TASK GOES HERE -->
       </div>
 
