--- a/01/index.html
+++ b/01/index.html
@@ -54,10 +54,10 @@
       <img id='screenshot' src='rome.png'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      Rome is like a fever dream, traveling across the scenary that is semi-realistic but also not at the same time. 
+      Rome is like a fever dream, traveling across the scenary that is semi-realistic but also not at the same time. After waking up in the car, we can then observe what's around us and even fly to places in the dream. 
       </p>
       <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+      Technology: WebGL, THreeWebGL, html and other js libraries. 
       </p>
       <p id='comparison'>
       Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
