--- a/01/index.html
+++ b/01/index.html
@@ -51,10 +51,10 @@
     <div class='demo'>
 
       <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      <img id='screenshot' src='../Images/Screenshot 2025-09-09 170610.png'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
+      RO.ME is a very cool webgl demo!. I saw this and was amazed to see this eincredible WebGL demo with interactable features. 
       </p>
       <p id='technology'>
       Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
