--- a/01/index.html
+++ b/01/index.html
@@ -7,7 +7,7 @@
         color: white;
         font-family: sans-serif;
         text-align: center;
-        font-size: 20pt;
+        font-size: 16pt;
       }
 
       .demo {
@@ -20,7 +20,7 @@
         margin-right: 20px;
         margin-bottom: 20px;
         max-width: 300px;
-        border: thin solid white;
+        border: thin solid ghostwhite;
       }
 
       #description {
@@ -51,23 +51,32 @@
     <div class='demo'>
 
       <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+
+      <img id='screenshot' src='rome.jpg'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a an immersive experience that utilizes WEBGL to take the user through a 2D and 3D film acoompanied 
-        with music. It tells the story of a song through a three phase plan. 
+      RO.ME is a an immersive experience that utilizes WEBGL to take the user through a 2D and 3D film. It tells the story of a song through a three phase plan. The first phase begins with a couple 2D images that gradually transforms as well as cuts
+      to new images. The second phase takes the user through a 3D world in which the user uses the mouse to inspect the world as
+      well as direct a stream of graphics through a predetermined track. The third phase retains similar elements from the second phase but also expands on it by allowing the user to direct themselves through the world.
       </p>
       <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
-        RO.ME uses javascript and HTML to utulize the GPU in your computer to render images in your browser
+      Technology: <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+        RO.ME uses javascript and HTML to utilize the GPU in your computer to render images in your browser. 
       </p>
       <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
+      Comparison: <!-- TODO: FILL IN THE COMPARISON -->
+      <a href = "https://lusion.co/" target="_blank" title="Secondary Reference">
+        Try Me 
+      </a>
+      Lusion is another example of browser graphical rendering. While RO.ME takes you through a modeled experience, Lusion
+      is based more in user web-based interaction. As you scroll through the website, the user is met with interaction canvases that demonstrate the power of WEBGL just as well. 
       </p>
       <p id='ai'>
-      Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+      Significance (AI): <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+      In conclusion, RO.ME was revolutionary and has opened doors for web development. I had a conversation with CHATGPT and this
+      is what it had to say 
+      "RO.ME – 3 Dreams of Black was a groundbreaking interactive music video created in 2011 that showcased the power of WebGL and HTML5, allowing real-time 3D storytelling directly in the browser. It combined music, art, and technology in a way that pushed the boundaries of digital storytelling and interactive media. As one of the first major web-based 3D experiences, it influenced future interactive projects and helped shape the evolution of immersive web experiences." 
       </p>
-
       <div id='bonus'>
         <!-- TODO: BONUS TASK GOES HERE -->
       </div>
