--- a/01/index.html
+++ b/01/index.html
@@ -54,8 +54,8 @@
       <img id='screenshot' src='ROME.png'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo! It was such a fascinating demo of WebGL, and it definitely demonstrated how much web development technology has progressed. 
-      It was so surprising to see that this music video from 2011 really showed the rendering power of WebGL. The impact on the computing power of the web browser
+      RO.ME is a very cool webgl demo! It was a fascinating demonstration of WebGL, and it definitely showed how much web development technology has progressed. 
+      It was surprising to see that this 2011 music video effectively showcased the rendering power of WebGL. The impact on the computing power of the web browser
       allows users to actively interact in real-time seamlessly within the scenery. The switch in art style was the most captivating, which keeps you hooked. The 
       shifts between the art styles from 3D low poly to a 2D oil-like painting really give vibrant and unique colors at all times. It really makes you think how 
       much potential these frameworks have, and makes you curious about the improvement of our computing web browser that is supposed to be even more efficient 
@@ -65,7 +65,7 @@
       Technology: WebGL, HTML5, JavaScript, Three.js <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
       </p>
       <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
+      Comparison: <a href="https://le-voyage-azarien.art/interactive">Test</a> <!-- TODO: FILL IN THE COMPARISON -->
       </p>
       <p id='ai'>
       Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
