--- a/01/index.html
+++ b/01/index.html
@@ -65,10 +65,15 @@
       Technology: WebGL, HTML5, JavaScript, Three.js <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
       </p>
       <p id='comparison'>
-      Comparison: <a href="https://le-voyage-azarien.art/interactive">Test</a> <!-- TODO: FILL IN THE COMPARISON -->
+      Comparison: <a href="https://le-voyage-azarien.art/interactive">Le Voyage Azarien</a> <!-- TODO: FILL IN THE COMPARISON -->
+      The Le Voyage Azarien WebGL art offers a different experience in terms of the story and art style. It was meant to be a much more calming and relaxing story, while the art style
+      utilizes the lidar sensor. The lidar sensor was used to capture and recreate the 3D object in small segments of dots. On the other hand, the ROME experience was a music video that
+      matches the art style, where it feels like going on a wild and unknown journey.
       </p>
       <p id='ai'>
-      Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+      Significance (AI): RO.ME was the first fully interactive WebGL-based film that showcased real-time 3D graphics and 2D animations without plugins. It allows the user to navigate
+      dreamlike scenes that demonstrate modern browsers can compete with native applications in graphical interactivity. This pushed the boundary of computer graphics, inspiring many developers
+      to begin their own experiences.<!-- TODO: SUMMARIZE THE AI OUTPUT -->
       </p>
 
       <div id='bonus'>
