--- a/01/index.html
+++ b/01/index.html
@@ -71,9 +71,9 @@
       matches the art style, where it feels like going on a wild and unknown journey.
       </p>
       <p id='ai'>
-      Significance (AI): RO.ME was the first fully interactive WebGL-based film that showcased real-time 3D graphics and 2D animations without plugins. It allows the user to navigate
+      Significance (AI): RO.ME was the first fully interactive WebGL-based film that showcased real-time 3D graphics and 2D animations without plugins. It allows the user to navigate <!-- TODO: SUMMARIZE THE AI OUTPUT -->
       dreamlike scenes that demonstrate modern browsers can compete with native applications in graphical interactivity. This pushed the boundary of computer graphics, inspiring many developers
-      to begin their own experiences.<!-- TODO: SUMMARIZE THE AI OUTPUT -->
+      to begin their own experiences.
       </p>
 
       <div id='bonus'>
