--- a/01/index.html
+++ b/01/index.html
@@ -73,7 +73,7 @@
       <p id='ai'>
       Significance (AI): RO.ME was the first fully interactive WebGL-based film that showcased real-time 3D graphics and 2D animations without plugins. It allows the user to navigate <!-- TODO: SUMMARIZE THE AI OUTPUT -->
       dreamlike scenes that demonstrate modern browsers can compete with native applications in graphical interactivity. This pushed the boundary of computer graphics, inspiring many developers
-      to begin their own experiences.
+      to begin their own experiences. - ChatGPT
       </p>
 
       <div id='bonus'>
