--- a/01/index.html
+++ b/01/index.html
@@ -51,19 +51,31 @@
     <div class='demo'>
 
       <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      <img id='screenshot' src='https://i.imgur.com/r2zUqdq.png'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
+      RO.ME is a very cool webgl demo! It's an interactive film that takes advantage of WebGL to showcase 3D graphics using your 
+      computer's hardware. In the interactive film, you go through a sequence of 3 different dreams, each one being presented in 
+      a different video media which you can navigate with your cursor.
       </p>
       <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+      Technology: <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+      RO.ME makes use of various technologies such as WebGL, Three.js, Javascript, HTML, and Blender.
       </p>
       <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
+      Comparison: 
+      <a href = "https://www.airforce.com/intothestorm/">Into the Storm</a> is another interactive film experience, similar to RO.ME! 
+      In this experience, you navigate and go through the film largely by using your scroll wheel, as opposed to the RO.ME experience
+       which you navigate through by moving your mouse cursor around to look more closely at your environment. Also, where RO.ME is more
+       abstract and based in colorful visuals, Into the Storm is more grounded, with the film travelling through a gray, snowy mountain with
+        audio recordings narrating the story of five survivors.<!-- TODO: FILL IN THE COMPARISON -->
       </p>
       <p id='ai'>
-      Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+      Significance (AI):
+      According to ChatGPT, RO.ME specifically was significant because it was the first interactive film rendered entirely using WebGL. 
+      It was an impressive demo that showcased how an internet browser could be used as a powerful rendering engine for unique and immersive
+       3D experiences that utilize user control to make the experience interactive. The impressive demo even won multiple awards for the 
+       technology it displayed, such as the D&AD Yellow Pencil for animation/digital design in 2012! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
       </p>
 
       <div id='bonus'>
