--- a/01/index.html
+++ b/01/index.html
@@ -51,25 +51,45 @@
     <div class='demo'>
 
       <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      <img id='screenshot' src='RO.ME.png'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
+      RO.ME is an interactive WebGL film that was created by Chris Milk with some friend from Google and it was released in 2011.
+      In this demo, the user interacts with the world simply by moving the mouse.
+      It controls the camera and triggers beautiful animations like geometric animals and plants appearing in the 
+      city, birds flying across the desert as the ground turn green. The project showcases the potential of WebGL
+      able to create beautiful 3d animations and visuals by combination of storytelling and music that run in browsers.
+      It impacts many others to share their creative ideas through Webgl.
       </p>
       <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+      Technology:<!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+      WebGL, JavaScript, HTML, CSS, Github Page
       </p>
       <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
+      Comparison: <!-- TODO: FILL IN THE COMPARISON -->
+      <a href="https://egghunt.merci-michel.com/"> MSI - Egg Hunt </a> 
+      <br> This is another WebGL based Project that showcases a different aspect of WebGL's potential. Unlike RO.ME which is an interactive film
+      with visuals and music, MSI- Egg Hunt is a game where you control a bunny-like robot character that dashes super  fast forward. The goal is 
+      to collect eggs and dodge the moving rocks. The faster you move, the more eggs you can earn before they merge into one.
+      If you hit a rock, the game is over. The game has amazing animation for bunny dash and during collision. The MSI- Egg Hunt experience is 
+      very different to RO.ME because you play the Egg game again and again to get high score, while Rome - "3 Dreams of Black" is an interactive film that you experience
+      for its creative animation and music.
       </p>
       <p id='ai'>
-      Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+      Significance (AI):  <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+      RO.ME was a major achievement because it used WebGL technology to create complex, real time 3D world that run directly in a web browser without
+      plugins like Flash. Before RO.ME, projects like this usually required dedicated software. Because of this demo, it inspired many developer to explore webGL leading to a wave of 
+      interactive webGl projects.
+      <br>Credit: Google Gemini
       </p>
 
       <div id='bonus'>
         <!-- TODO: BONUS TASK GOES HERE -->
+        <iframe class="viewer" src="viewer.html?models/alligator.gltf"></iframe>
+        <iframe class="viewer" src="viewer.html?models/birdsA_parrot.gltf"></iframe>
+        <iframe class="viewer" src="viewer.html?models/quadruped_horse.gltf"></iframe>
       </div>
-
+      Credit: <a href="https://github.com/mrdoob/rome-gltf">mrdoob - Github</a>
     </div>
 
   </body>
